--- a/riders_app/pubspec.yaml
+++ b/riders_app/pubspec.yaml
@@ -28,33 +28,28 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  flutter:
-    sdk: flutter
   cloud_firestore: ^4.16.1
   cupertino_icons: ^1.0.6
   firebase_auth: ^4.19.1
   firebase_core: ^2.29.0
   firebase_storage: ^11.7.1
+  flutter:
+    sdk: flutter
   geocoding: ^3.0.0
   geolocator: ^11.0.0
   image_picker: ^1.0.7
+  intl: ^0.19.0
   permission_handler: ^11.3.1
   shared_preferences: ^2.2.3
+  url_launcher: ^6.2.6
 
 dev_dependencies:
+  flutter_lints: ^3.0.0
   flutter_test:
     sdk: flutter
 
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
-  flutter_lints: ^3.0.0
-
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter packages.
 flutter:
 
@@ -67,13 +62,10 @@ flutter:
   assets:
     - assets/images/
   #   - images/a_dot_ham.jpeg
-
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
